# cerbo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  devenv.nix  flake.nix  manifest  package-lock.json  package.json  pnpm-lock.yaml  test-core.sh
.beads/: config.yaml  issues.jsonl  metadata.json
.cargo/: config.toml
.cerbo/: index.json
.cerbo/objects/10270714-7005-4627-8b5e-ac75a30c1990/: backrefs.ttl  meta.ttl  page.md
.cerbo/objects/1e5d7dc7-a34c-4a2a-aa49-8bfe2b9805b6/: backrefs.ttl  meta.ttl  page.md
.cerbo/objects/8e5f0659-ab10-40ce-8aef-da0bc3b97873/: annotations.ttl  backrefs.ttl  meta.ttl  page.md
.cerbo/objects/f7e435db-9740-4a2a-8e57-b439c4f8bb18/: meta.ttl  page.md
.github/workflows/: release.yml
.lean-ctx/: graph.meta.json
cli/: Cargo.toml  build.rs
cli/man/: cerbo.1  cerbo.md
cli/src/: main.rs  main.rs.bak
cli/tests/: cli_integration.rs
core/: Cargo.toml
core/src/: annotation.rs  annotations.rs  config.rs  context.rs  fixtures.rs  index.rs  lib.rs  links.rs  metadata_index.rs  migration.rs  object.rs  page.rs  paths.rs  rename.rs  slug.rs  state.rs  ui_settings.rs  vault.rs  vault_symlink.rs
docs/: storage.md
migrate/: Cargo.toml
migrate/src/: main.rs
nix/: bun.nix  deps.nix  devshell.nix  pkgs.nix
openspec/: config.yaml
openspec/changes/adapt-cerbo-desktop-to-new-storage-model/: tasks.md
openspec/changes/add-cli-man-page/: design.md  proposal.md  tasks.md
openspec/changes/add-global-hotkeys/: proposal.md  tasks.md
openspec/changes/add-vault-symlink-command/: design.md  proposal.md  tasks.md
openspec/changes/change-hotkeys/: design.md  proposal.md  tasks.md
openspec/changes/cli-json-flag/: design.md  proposal.md  tasks.md
openspec/changes/convert-devenv-to-flake/: proposal.md
openspec/changes/enhanced-editor-plugins-and-attachments/: design.md  proposal.md  tasks.md
openspec/changes/fs-change-diff-preview/: design.md  proposal.md  tasks.md
openspec/changes/help-window-two-columns/: design.md  proposal.md  tasks.md
openspec/changes/markdown-wiki-editor/: tasks.md
openspec/changes/modal-confirmation-unification/: design.md  tasks.md
openspec/changes/native-vault-dialog/: design.md  tasks.md
openspec/changes/optional-custom-title-bar/: design.md  proposal.md  tasks.md
openspec/changes/page-preview-task-list-checkboxes/: tasks.md
openspec/changes/rebuild-page-metadata/: proposal.md  tasks.md
openspec/changes/reflect-fs-changes-current-page/: proposal.md  tasks.md
openspec/changes/release-workflow/: tasks.md
src/: app.css  app.html
src-tauri/: Cargo.toml  cerbo-desktop.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: index.rs  lib.rs  main.rs  page.rs  paths.rs  rename.rs  slug.rs  vault.rs
src/lib/: AttachmentsPanel.svelte  BacklinksPanel.svelte  ConfirmationDialog.svelte  ExitConfirmation.svelte  ExternalChangeDialog.svelte  GlobalSearch.svelte  KeyboardHelp.svelte  NewPageDialog.svelte  PageEditor.svelte  PageList.svelte  RenamePageDialog.svelte  RightSidebarPanel.svelte  ThemeToggle.svelte  VaultSwitcher.svelte  WikilinkAutocomplete.svelte  cursor-position.test.ts  cursor-position.ts  hotkeys.ts  page-sync.test.ts  page-sync.ts  remark-gridtables.d.ts  slug.ts  stores.svelte.ts  task-list.test.ts  task-list.ts  textarea-focus.test.ts  textarea-focus.ts  wikilink-plugin.ts
src/routes/: +layout.svelte  +page.svelte
test-vault/task-list-basic/: page.md
test-vault/task-list-mixed/: page.md
test-vault/task-list-nested/: page.md
test-vault/test-page/: page.md
(+236 files in other folders)
