[package]
name = "cerbo"
version = "0.1.0"
edition = "2024"

[dependencies]
cerbo-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
notify = "6"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
cerbo-core = { path = "../core", features = ["test-utils"] }
