[package]
name = "cerbo"
version = "0.0.11"
edition = "2024"

[dependencies]
cerbo-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
cerbo-core = { path = "../core", features = ["test-utils"] }
