[package]
name = "cerbo-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
notify = "6"
unicode-normalization = "0.1"
chrono = "0.4"
xdg = "2"
tempfile = { version = "3", optional = true }

[features]
test-utils = ["dep:tempfile"]

[dev-dependencies]
tempfile = "3"
