[package]
name = "cerbo-migrate"
version = "0.0.19"
edition = "2021"
description = "Migration tool for Cerbo vaults (slug-based → UUID-based)"

[dependencies]
cerbo-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.11"

[dev-dependencies]
tempfile = "3.12"
