[package]
name = "cerbo"
version = "0.1.0"
description = "A local-first markdown wiki"
authors = []
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
name = "cerbo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
notify = "6"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
